# greybook

./: .coveragerc  .env.example  .gitignore  Dockerfile  Dockerfile.multi-stage  README.md  app.py  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: tests.yml
bluelog/: __init__.py  emails.py  extensions.py  fakes.py  forms.py  models.py  settings.py  utils.py
bluelog/core/: commands.py  errors.py  logging.py  request.py  templating.py
bluelog/static/css/: black_swan.min.css  perfect_blue.min.css  style.css
bluelog/static/js/: main.js  script.js
bluelog/templates/: base.html
bluelog/templates/admin/: edit_category.html  edit_link.html  edit_post.html  manage_category.html  manage_comment.html  manage_link.html  manage_post.html  new_category.html  new_link.html  new_post.html  settings.html
bluelog/templates/auth/: login.html
bluelog/templates/blog/: _posts.html  _sidebar.html  about.html  category.html  index.html  post.html
bluelog/templates/errors/: 400.html  404.html  500.html
bluelog/views/: admin.py  auth.py  blog.py
greybook/: __init__.py  emails.py  fakes.py  forms.py  lorem.py  models.py  settings.py  utils.py
greybook/blueprints/: admin.py  auth.py  blog.py
greybook/core/: commands.py  errors.py  extensions.py  logging.py  request.py  shell.py  templating.py
greybook/static/css/: default.min.css
greybook/static/js/: main.js
greybook/templates/: base.html  macros.html
greybook/templates/admin/: manage_category.html  manage_comment.html  manage_link.html  manage_post.html  new_link.html  settings.html
greybook/templates/blog/: _sidebar.html  about.html  category.html  index.html  post.html
greybook/templates/errors/: 400.html  404.html  500.html
greybook/views/: admin.py  blog.py
migrations/versions/: 5c7fb996a88b_initial_migration.py
tests/: __init__.py  base.py  test_admin.py  test_auth.py  test_basic.py  test_blog.py  test_cli.py
