[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "watchdog>=3.0.0",
    "faker>=18.9.0",
    "flake8>=5.0.4",
]
test = [
    "pytest>=7.3.1",
    "coverage>=7.2.6",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Grey Li", email = "withlihui@gmail.com"},
]
dependencies = [
    "flask>=2.2.5",
    "flask-login>=0.6.2",
    "flask-mail>=0.9.1",
    "flask-wtf>=1.1.1",
    "flask-sqlalchemy>=3.0.3",
    "flask-migrate>=4.0.4",
    "bootstrap-flask>=2.2.0",
    "flask-ckeditor>=0.4.6",
    "email-validator>=2.0.0.post2",
    "flask-debugtoolbar>=0.13.1",
    "python-dotenv>=0.21.1",
    "flask-mailman>=0.3.0",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
